@@ -1,5 +1,6 @@
 version 10.0
 date: dd/mm/yyyy
+  * rename the service compileAndDownloadReport to compileAndExportReport, while allowing to indicate an optional deployer
   * added time machine
   * added undo management
   * added the possibility in the advancedSearch to not pass the predicate in predicate-object where the object can be text-searched
